# chat-thingy

./: Cargo.toml  README.md
client-android-bindings/: Cargo.toml
client-android-bindings/src/: lib.rs
client-android/app/: build.gradle
client-android/app/src/main/java/com/example/housechat/: Acceuil.java  Authentification.java  ChatActivity.java
client-android/app/src/main/java/com/example/housechat/com/model/: Contact.java  Profile.java  Server.java
client-android/app/src/main/res/drawable/: designbutton.xml  ic_baseline_house_24.xml  ic_baseline_person_outline_24.xml
client-android/app/src/main/res/layout/: activity_acceuil.xml  activity_authentification.xml  activity_create_accouant.xml  activity_password.xml  chatfragment.xml
client-android/app/src/main/res/menu/: menu.xml
client-cli/: Cargo.toml
client-cli/serv/: session.db
client-cli/serv/e/: storage.db
client-cli/src/: main.rs
client-core/: Cargo.toml
client-core/src/: client.rs  ephemeral_keys.rs  error.rs  lib.rs  loop.rs  message.rs  profile.rs  types.rs
client-core/src/database/: contact.rs  message.rs  mod.rs  profile.rs  server.rs
client-core/src/task/: contact.rs  mod.rs  profile.rs  server.rs
common/: Cargo.toml
common/src/: hash.rs  keys.rs  lib.rs
common/src/api/: mod.rs  request.rs  response.rs
server/: Cargo.toml  cert.pem  db.sql  key.pem
server/src/: main.rs
server/src/database/: challenge.rs  message.rs  mod.rs  user.rs
server/src/server/: mod.rs  utils.rs
