[package]
name = "client-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client-core = { path = "../client-core" }
rpassword = "5.0.1"
rustyline = "9.1.0"
clap = "3.1.0"
zeroize = "1.3.0"
chrono-humanize = "0.2.1"
chrono = "0.4.19"

tracing = "0.1"
