[package]
name = "client-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

tokio = { version = "1.17.0", features = [ "full" ] }
futures = "0.3.19"
sqlx = { version = "0.5.9", features = [ "sqlite", "runtime-tokio-native-tls" ] }
rand = "0.8.4"
borsh = "0.9.2"
chacha20poly1305 = "0.9.0"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
blake2 = "0.10.4"
rust-argon2 = "1.0.0"
base64 = "0.13.0"
reqwest = { version = "0.11.10", features = [ "gzip", "brotli", "deflate", "native-tls-alpn" ] }
reqwest-eventsource = { path = "../reqwest-eventsource" }
bytes = "1.0"
zeroize = "1.3.0"
tracing = "0.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
