[package]
name = "chat-thingy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

tokio = { version = "1.17.0", features = [ "full" ] }
sqlx = { version = "0.5.9", features = [ "postgres", "runtime-tokio-native-tls" ] }
warp = { version = "0.3.2", features = [ "tls" ] }

async-stream = "0.3.2"
futures = "0.3.19"

borsh = "0.9.2"

lazy_static = "1.4.0"

tracing = "0.1"
tracing-subscriber = { version = "0.2", features = [ "env-filter" ] }

rand = "0.8.4"

chrono = "0.4.19"

base64 = "0.13.0"
